Fix missing margin on body

--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -8,6 +8,7 @@ body > .container {
   background: $content-background-color;
   padding-bottom: 1rem;
   border: 1px solid $twhl-brand;
+  margin-top: 1rem;
 }
 
 body > footer {
